kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
  namespace: obligatorio-isc
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
